[gd_scene load_steps=14 format=2]

[ext_resource path="res://OQ_Toolkit/OQ_ARVRCamera.tscn" type="PackedScene" id=1]
[ext_resource path="res://OQ_Toolkit/OQ_LeftController.tscn" type="PackedScene" id=2]
[ext_resource path="res://OQ_Toolkit/OQ_RightController.tscn" type="PackedScene" id=3]
[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin/Locomotion_Stick.tscn" type="PackedScene" id=4]
[ext_resource path="res://OQ_Toolkit/OQ_Helpers/OQ_VisibilityToggle.tscn" type="PackedScene" id=5]
[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin.tscn" type="PackedScene" id=7]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRController/Feature_UIRayCast.tscn" type="PackedScene" id=8]
[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin/Feature_VRSimulator.tscn" type="PackedScene" id=9]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DCanvas.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scripts/MoveTesting.gd" type="Script" id=11]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.498039, 0.152941, 0.152941, 1 )

[sub_resource type="BoxShape" id=3]

[node name="Spatial" type="Spatial"]
script = ExtResource( 11 )

[node name="Feature_VRSimulator" parent="." instance=ExtResource( 9 )]

[node name="Ground" type="MeshInstance" parent="."]
transform = Transform( 32.8242, 0, 0, 0, 1.12205, 0, 0, 0, 29.2538, 0, 0, 0 )
use_in_baked_light = true
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="RigidBody" type="RigidBody" parent="Ground"]

[node name="CollisionShape" type="CollisionShape" parent="Ground/RigidBody"]
shape = SubResource( 3 )

[node name="OQ_ARVROrigin" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.0991634, 0, 0.995071, 0, 1, 0, -0.995071, 0, 0.0991634, -16.6667, 0.743603, 0 )

[node name="OQ_ARVRCamera" parent="OQ_ARVROrigin" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.14077, 0 )
current = true

[node name="OQ_LeftController" parent="OQ_ARVROrigin" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 3.84077, -0.5 )

[node name="Feature_UIRayCast" parent="OQ_ARVROrigin/OQ_LeftController" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00513482, 0, -3.8147e-06 )
ui_raycast_length = 100.0

[node name="OQ_RightController" parent="OQ_ARVROrigin" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 3.84077, -0.499996 )

[node name="OQ_VisibilityToggle" parent="OQ_ARVROrigin/OQ_RightController" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0854332, 0.178913, 0 )
invisible_on_start = true

[node name="OQ_UI2DCanvas" parent="OQ_ARVROrigin/OQ_RightController/OQ_VisibilityToggle" instance=ExtResource( 10 )]
editor_live_update = false
transparent = false
disable_collision = false

[node name="ReferenceRect" type="ReferenceRect" parent="OQ_ARVROrigin/OQ_RightController/OQ_VisibilityToggle/OQ_UI2DCanvas"]
visible = false
margin_left = 1.0
margin_right = 99.0
margin_bottom = 86.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="OQ_ARVROrigin/OQ_RightController/OQ_VisibilityToggle/OQ_UI2DCanvas/ReferenceRect"]
margin_left = 1.0
margin_top = 1.0
margin_right = 98.0
margin_bottom = 87.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="OQ_ARVROrigin/OQ_RightController/OQ_VisibilityToggle/OQ_UI2DCanvas/ReferenceRect"]
margin_left = 3.0
margin_top = 3.0
margin_right = 15.0
margin_bottom = 23.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="OQ_ARVROrigin/OQ_RightController/OQ_VisibilityToggle/OQ_UI2DCanvas/ReferenceRect"]
margin_left = 51.0
margin_top = 31.0
margin_right = 63.0
margin_bottom = 51.0

[node name="Button3" type="Button" parent="OQ_ARVROrigin/OQ_RightController/OQ_VisibilityToggle/OQ_UI2DCanvas/ReferenceRect"]
margin_left = 26.0
margin_top = 33.0
margin_right = 38.0
margin_bottom = 53.0

[node name="Button4" type="Button" parent="OQ_ARVROrigin/OQ_RightController/OQ_VisibilityToggle/OQ_UI2DCanvas/ReferenceRect"]
margin_left = 2.0
margin_top = 30.0
margin_right = 14.0
margin_bottom = 50.0

[node name="Button5" type="Button" parent="OQ_ARVROrigin/OQ_RightController/OQ_VisibilityToggle/OQ_UI2DCanvas/ReferenceRect"]
margin_left = 74.0
margin_top = 2.0
margin_right = 86.0
margin_bottom = 22.0

[node name="Button6" type="Button" parent="OQ_ARVROrigin/OQ_RightController/OQ_VisibilityToggle/OQ_UI2DCanvas/ReferenceRect"]
margin_left = 57.0
margin_top = 2.0
margin_right = 69.0
margin_bottom = 22.0

[node name="Button7" type="Button" parent="OQ_ARVROrigin/OQ_RightController/OQ_VisibilityToggle/OQ_UI2DCanvas/ReferenceRect"]
margin_left = 38.0
margin_right = 50.0
margin_bottom = 20.0

[node name="Button8" type="Button" parent="OQ_ARVROrigin/OQ_RightController/OQ_VisibilityToggle/OQ_UI2DCanvas/ReferenceRect"]
margin_left = 19.0
margin_top = 1.0
margin_right = 31.0
margin_bottom = 21.0

[node name="Locomotion_Stick" parent="OQ_ARVROrigin" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 3.84077, -0.499998 )
move_speed = 15.0

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -1.19209e-07, -0.5, -0.866025, -7.57103e-08, -0.866025, 0.5, -1, 1.25172e-07, 6.53831e-08, 0, 22.1167, 0 )

[connection signal="pressed" from="OQ_ARVROrigin/OQ_RightController/OQ_VisibilityToggle/OQ_UI2DCanvas/ReferenceRect/Button" to="." method="_on_Button_pressed"]
